--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        
         <div id="box">
 
-            <a href="students.html">
+            <a href="Students.html">
                 <div id="student">
                     <div id="phtoooo">
                            <img src="images/student.jpg">
