--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </a>
 
             
-           <a href="jio.html">
+           <a href="Faculty.html">
             <div id="Faculty">
                 <div id="phtoooo">
                 <img src="images/faculty.avif">
@@ -51,7 +51,7 @@
             </div>
         </a>
 
-            <a href="jio.html">
+            <a href="Visitor.html">
 
             <div id="Visitor">
                 <div id="phtoooo">
